--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Daniel Hac",
   "license": "ISC",
   "dependencies": {
+    "ejs": "~2.3.4",
     "express": "4.13.3"
   },
   "devDependencies": {
