--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "ejs": "~2.3.4",
     "express": "4.13.3",
     "express-session": "~1.12.0",
+    "http": "0.0.0",
     "mongodb": "~2.2.16",
     "passport": "~0.3.0",
-    "passport-local": "~1.0.0"
+    "passport-local": "~1.0.0",
+    "xml2js": "~0.4.15"
   },
   "devDependencies": {
     "gulp": "~3.9.1",
